[package]
name = "example"
version = "0.1.0"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>", "Kamil Rojewski <kamil.rojewski@gmail.com>"]
edition = "2018"

[dependencies]
time = "0.1.36"
cdrs-tokio-helpers-derive = { path = ".." }
cdrs-tokio = { git = "https://github.com/Jasperav/cdrs-tokio" }
uuid = "0.8"
